# weather-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  domain.py  domain_memory.py  domain_open_weather_map.py  domain_sqlite.py  domain_wrapper.py  locustfile.py  main.py  notifications.py  pyproject.toml
.github/workflows/: main.yaml
tests/: test_app.py  test_domain_memory.py  test_domain_open_weather_map.py  test_domain_sqlite.py  test_domain_wrapper.py
