[project]
name = "weather-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
requests = "^2.32.3"
flake8 = "^7.2.0"
