[project]
name = "weather-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
requests = "^2.32.3"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.2"
locust = "^2.37.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
bandit = "^1.8.3"
isort = "^6.0.1"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"
